tests/snapshots/codegen_snapshot_tests__std_traits_error_compiled.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub trait Error {
    fn message(&self) -> String;
    fn source(&self) -> Option<String>;
}
