tests/snapshots/codegen_snapshot_tests__std_traits_indexing_compiled.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
pub trait Index<K, V> {
    fn __getitem__(&self, key: K) -> V;
}
pub trait IndexMut<K, V> {
    fn __setitem__(&self, key: K, value: V);
}
pub trait Sliceable<T> {
    fn __getslice__(
        &self,
        start: Option<i64>,
        end: Option<i64>,
        step: Option<i64>,
    ) -> Vec<T>;
}
