tests/snapshots/codegen_snapshot_tests__std_traits_ops_compiled.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub trait Add<Rhs, Output> {
    fn __add__(&self, other: Rhs) -> Output;
}
pub trait Sub<Rhs, Output> {
    fn __sub__(&self, other: Rhs) -> Output;
}
pub trait Mul<Rhs, Output> {
    fn __mul__(&self, other: Rhs) -> Output;
}
pub trait Div<Rhs, Output> {
    fn __div__(&self, other: Rhs) -> Output;
}
pub trait Neg<Output> {
    fn __neg__(&self) -> Output;
}
pub trait Mod<Rhs, Output> {
    fn __mod__(&self, other: Rhs) -> Output;
}
