tests/snapshots/codegen_snapshot_tests__std_traits_prelude_compiled.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::traits::convert::From;
pub use crate::__incan_std::traits::convert::Into;
pub use crate::__incan_std::traits::convert::TryFrom;
pub use crate::__incan_std::traits::convert::TryInto;
pub use crate::__incan_std::traits::ops::Add;
pub use crate::__incan_std::traits::ops::Sub;
pub use crate::__incan_std::traits::ops::Mul;
pub use crate::__incan_std::traits::ops::Div;
pub use crate::__incan_std::traits::ops::Neg;
pub use crate::__incan_std::traits::ops::Mod;
pub use crate::__incan_std::traits::error::Error;
pub use crate::__incan_std::traits::indexing::Index;
pub use crate::__incan_std::traits::indexing::IndexMut;
pub use crate::__incan_std::traits::indexing::Sliceable;
pub use crate::__incan_std::traits::callable::Callable0;
pub use crate::__incan_std::traits::callable::Callable1;
pub use crate::__incan_std::traits::callable::Callable2;
