tests/snapshots/codegen_snapshot_tests__std_web_routing_compiled.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
pub fn route(path: String, methods: Vec<String>) {
    incan_stdlib::errors::__private::raise_runtime_misuse(
        "decorator marker 'incan_web_macros::route' cannot be called at runtime",
    )
}
pub const GET: &'static str = "GET";
pub const POST: &'static str = "POST";
pub const PUT: &'static str = "PUT";
pub const DELETE: &'static str = "DELETE";
pub const PATCH: &'static str = "PATCH";
pub const HEAD: &'static str = "HEAD";
pub const OPTIONS: &'static str = "OPTIONS";
